# studio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  Makefile  README.md  package-lock.json  package.json
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: build.yaml  build.yml  release.yaml  release.yml
crates/client/: Cargo.toml
crates/socket/: Cargo.toml
